--- a/trunk/ssf/web/docroot/WEB-INF/classes/content/messages.properties
+++ b/trunk/ssf/web/docroot/WEB-INF/classes/content/messages.properties
@@ -32,6 +32,11 @@ __close_button=Close button
 __country=Country
 __custom_jsp=Custom jsp
 __dashboard_canvas=Dashboard
+__dashboard.folder=Folder listing
+__dashboard.search=Search results
+__dashboard.favorites=Favorites
+__dashboard.html=HTML
+__dashboard.iframe=IFrame
 __data_item_name=Data item name
 __data_items_from_the_entry_form=Data items from the Entry Form
 __data_name=Data name
