--- a/trunk/ssf/web/docroot/WEB-INF/classes/content/messages.properties
+++ b/trunk/ssf/web/docroot/WEB-INF/classes/content/messages.properties
@@ -37,6 +37,7 @@ __dashboard.search=Search results
 __dashboard.favorites=Favorites
 __dashboard.html=HTML
 __dashboard.iframe=IFrame
+__dashboard.workspaceTree=Workspace tree
 __data_item_name=Data item name
 __data_items_from_the_entry_form=Data items from the Entry Form
 __data_name=Data name
@@ -306,6 +307,9 @@ button.close=Close
 button.delete=Delete
 button.home=Home
 button.modify=Modify
+button.moveDown=Move down
+button.moveUp=Move up
+button.saveChanges=Save changes
 button.ok=OK
 button.today=Today
 
@@ -383,9 +387,21 @@ common.select.none=--none--
 dashboard.componentTitle.folder=Folder
 dashboard.componentTitle.search=Search
 
+dashboard.alignment=Alignment
+dashboard.alignment.center=Center
+dashboard.alignment.left=Left
+dashboard.alignment.right=Right
+dashboard.enterHtml=Enter the HTML to be shown
+dashboard.height=Iframe height in pixels
 dashboard.includeBinderTitle=Include the workspace or folder title
+dashboard.layout=Dashboard layout
 dashboard.selectComponent=select a component
+dashboard.startingPoint=Starting point for the tree
+dashboard.startingPoint.current=Start at the current workspace
+dashboard.startingPoint.select=Select a starting workspace
 dashboard.title=Dashboard title
+dashboard.width=Iframe width in pixels
+dashboard.url=Iframe source URL
 
 definition.builder=Definition builder
 definition.currentWorkflowConditionDuration=Duration
