--- a/trunk/ssf/web/docroot/WEB-INF/classes/content/messages.properties
+++ b/trunk/ssf/web/docroot/WEB-INF/classes/content/messages.properties
@@ -562,7 +562,6 @@ folder.label.name = Name
 folder.label.description=Description
 folder.add.title=Add folder
 
-forum.notConfigured=The portlet preferences are not set. Choose the edit button to configure the portlet.
 forum.selectForums=Select the folders to be shown:
 forum.selectedForums=Currently selected folders:
 forum.unread=Unread entries
@@ -570,6 +569,8 @@ forum.unread=Unread entries
 general.notLoggedIn=Your session has timed out. Please log in again.
 general.please_select=--select one--
 general.portletCacheProblem=You must log out, then log in again to make this portlet work again.
+general.users=Users
+general.groups=Groups
 
 icon.close=Close
 icon.move=Move
@@ -627,6 +628,8 @@ notify.addresses=Send to a list of e-mail addresses.
 notify.addresses.instructions= (Enter one e-mail address per line)
 notify.folder.label=Folder:
 
+portlet.notConfigured=The portlet preferences are not set. Choose the edit button to configure the portlet.
+
 presence.addToOutlook=
 presence.away=Away
 presence.call=Call...
@@ -641,7 +644,8 @@ presence.sendIM=Send instant message...
 presence.sendMail=Send mail
 presence.startIM=Start instant meeting...
 presence.statusAt=status at
-
+presence.configure=Configure buddy list
+presence.configure.buddies=Buddies
 profile.list=List users
 
 schedule.repeat=Repeat every
@@ -677,6 +681,7 @@ toolbar.menu.modify_workspace=Modify this workspace
 toolbar.menu.move_workspace=Move this workspace
 toolbar.modify=Modify
 toolbar.move=Move
+toolbar.presence=Refresh
 toolbar.reply=Reply
 toolbar.showUnseen=Show count of recent unread entries
 
