--- a/trunk/ssf/web/docroot/WEB-INF/classes/content/messages.properties
+++ b/trunk/ssf/web/docroot/WEB-INF/classes/content/messages.properties
@@ -391,11 +391,20 @@ dashboard.alignment=Alignment
 dashboard.alignment.center=Center
 dashboard.alignment.left=Left
 dashboard.alignment.right=Right
+dashboard.binderDashboard=This is the shared dashboard for the current workspace or folder. This is seen by everyone.
+dashboard.configure=Configure the dashboard
+dashboard.globalDashboard=This is your personal global dashboard. It is shown on all folders and workspaces.
+dashboard.localDashboard=This is your personal dashboard for the current folder or workspace.
+dashboard.editLocal=Your personal dashboard for this workspace or folder
+dashboard.editGlobal=Your global dashboard (shown on all workspaces or folders)
+dashboard.editBinder=The shared dashboard that everyone sees for the current workspace or folder
 dashboard.enterHtml=Enter the HTML to be shown
 dashboard.height=Iframe height in pixels
 dashboard.includeBinderTitle=Include the workspace or folder title
 dashboard.layout=Dashboard layout
+dashboard.rootOpen=Expand the first level of the tree
 dashboard.selectComponent=select a component
+dashboard.selectDashboard=Select the dashboard to be modified:
 dashboard.startingPoint=Starting point for the tree
 dashboard.startingPoint.current=Start at the current workspace
 dashboard.startingPoint.select=Select a starting workspace
