dashboard as portlets

--- a/ssf/web/docroot/WEB-INF/classes/content/messages.properties
+++ b/ssf/web/docroot/WEB-INF/classes/content/messages.properties
@@ -397,7 +397,8 @@ dashboard.configure=Configure the dashboard
 dashboard.configure.local=Configure your personal dashboard
 dashboard.configure.global=Configure your default dashbaord
 dashboard.configure.binder=Configure the shared dashboard
-dashboard.globalDashboard=This is your personal global dashboard. It is shown on all folders and workspaces.
+dashboard.displatNotAvailable=[The component display is not available during configuration.]
+dashboard.globalDashboard=This is your default dashboard. It is shown on all folders and workspaces.
 dashboard.localDashboard=This is your personal dashboard for the current folder or workspace.
 dashboard.editLocal=Your personal dashboard that only you see on this workspace or folder
 dashboard.editGlobal=Your default dashboard (shown only to you on all workspaces or folders)
