dashboard as portlets

--- a/ssf/web/docroot/WEB-INF/classes/content/messages.properties
+++ b/ssf/web/docroot/WEB-INF/classes/content/messages.properties
@@ -394,9 +394,9 @@ dashboard.alignment.left=Left
 dashboard.alignment.right=Right
 dashboard.binderDashboard=This is the shared dashboard for the current workspace or folder. This is seen by everyone.
 dashboard.configure=Configure the dashboard
-dashboard.configure.local=Configure your personal dashboard
-dashboard.configure.global=Configure your default dashbaord
-dashboard.configure.binder=Configure the shared dashboard
+dashboard.configure.local=Configure your personal dashboard (for this page only)
+dashboard.configure.global=Configure your default dashbaord (for all workspace and folder pages)
+dashboard.configure.binder=Configure the shared dashboard (for this page only)
 dashboard.displatNotAvailable=[The component display is not available during configuration.]
 dashboard.globalDashboard=This is your default dashboard. It is shown on all folders and workspaces.
 dashboard.localDashboard=This is your personal dashboard for the current folder or workspace.
