--- a/trunk/ssf/web/docroot/WEB-INF/classes/content/messages.properties
+++ b/trunk/ssf/web/docroot/WEB-INF/classes/content/messages.properties
@@ -305,12 +305,14 @@ button.apply=Apply
 button.cancel=Cancel
 button.close=Close
 button.delete=Delete
+button.hide=Hide
 button.home=Home
 button.modify=Modify
 button.moveDown=Move down
 button.moveUp=Move up
 button.saveChanges=Save changes
 button.ok=OK
+button.show=Show
 button.today=Today
 
 calendar.january=January
@@ -393,12 +395,16 @@ dashboard.alignment.center=Center
 dashboard.alignment.left=Left
 dashboard.alignment.right=Right
 dashboard.binderDashboard=This is the shared dashboard for the current workspace or folder. This is seen by everyone.
+dashboard.componentLayout=Dashboard component configuration
 dashboard.configure=Configure the dashboard
 dashboard.configure.local=Configure your personal dashboard (for this page only)
 dashboard.configure.global=Configure your default dashbaord (for all workspace and folder pages)
 dashboard.configure.binder=Configure the shared dashboard (for this page only)
 dashboard.displatNotAvailable=[The component display is not available during configuration.]
 dashboard.globalDashboard=This is your default dashboard. It is shown on all folders and workspaces.
+dashboard.local=Personal
+dashboard.global=Default
+dashboard.binder=Shared
 dashboard.localDashboard=This is your personal dashboard for the current folder or workspace.
 dashboard.editLocal=Your personal dashboard that only you see on this workspace or folder
 dashboard.editGlobal=Your default dashboard (shown only to you on all workspaces or folders)
