more workflow timers

--- a/ssf/web/docroot/WEB-INF/classes/content/messages.properties
+++ b/ssf/web/docroot/WEB-INF/classes/content/messages.properties
@@ -665,6 +665,7 @@ presence.startIM=Start instant meeting...
 presence.statusAt=status at
 presence.configure=Configure buddy list
 presence.configure.buddies=Buddies
+presence.last.refresh=As of:
 profile.list=List users
 
 schedule.repeat=Repeat every
