--- a/trunk/ssf/web/docroot/WEB-INF/classes/content/messages.properties
+++ b/trunk/ssf/web/docroot/WEB-INF/classes/content/messages.properties
@@ -124,6 +124,7 @@ __icons.workspace=Workspace icons
 __id=ID
 __initialState=Initial state
 __inline=Inline
+__jackrabbit_repository=Jackrabbit JCR
 __lastName=Last name
 __layout_options=Layout options
 __left=Left
