--- a/trunk/ssf/web/docroot/WEB-INF/classes/content/messages.properties
+++ b/trunk/ssf/web/docroot/WEB-INF/classes/content/messages.properties
@@ -397,10 +397,11 @@ dashboard.alignment.left=Left
 dashboard.alignment.right=Right
 dashboard.binderDashboard=This is the shared dashboard for the current workspace or folder. This is seen by everyone.
 dashboard.componentLayout=Dashboard component configuration
+dashboard.componentTitle=Component title
 dashboard.configure=Configure the dashboard
-dashboard.configure.local=Configure your personal dashboard (for this page only)
-dashboard.configure.global=Configure your default dashbaord (for all workspace and folder pages)
-dashboard.configure.binder=Configure the shared dashboard (for this page only)
+dashboard.configure.local=Add, modify, or delete components from your <b>personal dashboard</b> (for this page)
+dashboard.configure.global=Add, modify, or delete components from your <b>default dashbaord</b> (for all workspace and folder pages)
+dashboard.configure.binder=Add, modify, or delete components from the <b>shared dashboard</b> (for this page)
 dashboard.displatNotAvailable=[The component display is not available during configuration.]
 dashboard.globalDashboard=This is your default dashboard. It is shown on all folders and workspaces.
 dashboard.local=Personal
