--- a/ssf/web/docroot/WEB-INF/classes/content/messages.properties
+++ b/ssf/web/docroot/WEB-INF/classes/content/messages.properties
@@ -391,6 +391,7 @@ Configure=Configure
 dashboard.componentTitle.folder=Folder
 dashboard.componentTitle.search=Search
 
+dashboard.addModifyDelete=Add, modify or delete components on:
 dashboard.alignment=Alignment
 dashboard.alignment.center=Center
 dashboard.alignment.left=Left
@@ -399,10 +400,11 @@ dashboard.binderDashboard=This is the shared dashboard for the current workspace
 dashboard.componentLayout=Dashboard component configuration
 dashboard.componentTitle=Component title
 dashboard.configure=Configure the dashboard
-dashboard.configure.local=Add, modify, or delete components from your <b>personal dashboard</b> (for this page)
-dashboard.configure.global=Add, modify, or delete components from your <b>default dashbaord</b> (for all workspace and folder pages)
-dashboard.configure.binder=Add, modify, or delete components from the <b>shared dashboard</b> (for this page)
-dashboard.displatNotAvailable=[The component display is not available during configuration.]
+dashboard.configure.local=your personal dashboard (shown only to you when viewing this page)
+dashboard.configure.global=your default dashbaord (shown only to you when viewing any workspace or folder page)
+dashboard.configure.binder=the shared dashboard (shown to everyone when viewing this page)
+dashboard.dataNotVisible=[The component data is not available while the component is hidden.]
+dashboard.displayNotAvailable=[The component display is not available during configuration.]
 dashboard.globalDashboard=This is your default dashboard. It is shown on all folders and workspaces.
 dashboard.local=Personal
 dashboard.global=Default
