--- a/ssf/web/docroot/WEB-INF/classes/content/messages.properties
+++ b/ssf/web/docroot/WEB-INF/classes/content/messages.properties
@@ -31,6 +31,7 @@ __close=Close
 __close_button=Close button
 __country=Country
 __custom_jsp=Custom jsp
+__dashboard.buddyList=Buddy list
 __dashboard_canvas=Dashboard
 __dashboard.folder=Folder listing
 __dashboard.search=Search results
