--- a/trunk/ssf/web/docroot/WEB-INF/classes/content/messages.properties
+++ b/trunk/ssf/web/docroot/WEB-INF/classes/content/messages.properties
@@ -540,6 +540,9 @@ exception.notAvailable.message=That resource is not available.
 exception.contactAdmin=Please contact your System Administrator for assistance.
 
 favorites=Favorites
+favorites.addCategory=Add a new favorites category
+favorites.addCurrentPage=Add the current page to the favorites list
+favorites.categoryName=Category name:
 favorites.delete=Delete (drag here to delete)
 
 file.error=File error
@@ -595,6 +598,7 @@ general.please_select=--select one--
 general.portletCacheProblem=You must log out, then log in again to make this portlet work again.
 general.users=Users
 general.groups=Groups
+general.Refresh=Refresh
 
 icon.close=Close
 icon.move=Move
@@ -636,6 +640,12 @@ nav.lastEntry=Last entry
 nav.nextEntry=Next entry
 nav.noEntries=No more entries
 nav.prevEntry=Previous entry
+
+navigation.clipboard=Clipboard
+navigation.help=Help
+navigation.history=History
+navigation.search=Search
+navigation.workspace=Workspace
 
 none=none
 
