--- a/ssf/web/docroot/WEB-INF/classes/content/messages.properties
+++ b/ssf/web/docroot/WEB-INF/classes/content/messages.properties
@@ -645,7 +645,7 @@ navigation.clipboard=Clipboard
 navigation.help=Help
 navigation.history=History
 navigation.search=Search
-navigation.workspace=Workspace
+navigation.favorites=Favorites
 
 none=none
 
