File folder definition

--- a/ssf/web/docroot/WEB-INF/classes/content/messages.properties
+++ b/ssf/web/docroot/WEB-INF/classes/content/messages.properties
@@ -84,7 +84,7 @@ __folder_listing=Folder listing
 __folder_folder=Entry folder
 __folder_file=File folder
 __folder_event=Calendar
-__folderName=Folder naqme
+__folderName=Folder name
 __form=Form
 __form_buttons=Form buttons
 __form_elements=Entry specific form elements
