--- a/ssf/web/docroot/WEB-INF/classes/content/messages.properties
+++ b/ssf/web/docroot/WEB-INF/classes/content/messages.properties
@@ -6,6 +6,8 @@
 __accessControls=Access controls
 __add=Add
 __add_a_new_entry_definition=Add a new entry definition
+__add_a_new_file_entry_definition=Add a new file entry definition
+__add_a_new_file_folder_view=Add a new file folder view
 __add_a_new_folder_view=Add a new folder view
 __add_a_new_profile_view=Add a new profile listing view
 __add_a_new_profile_entry_view=Add a new profile entry definition
@@ -75,6 +77,16 @@ __event=Event
 __exit_notification=Notification on exit from this state
 __expandable_div=Expandable area
 __fieldset=Fieldset
+__file_entry_definition=File entry definition
+__file_entry_definitions=File entry definitions
+__file_entry_form_definition=File entry form definition
+__file_entry_view_definition=File entry view definition
+__file_folder=File folder
+__file_folder_form=File folder form
+__file_folder_listing=File folder listing
+__file_folder_view=File folder view
+__file_folder_view_definition=File folder view definition
+__file_folder_views=File folder views
 __file_system=File system
 __file_upload=File upload
 __filter_bar=Filter bar
@@ -263,7 +275,10 @@ administration.configure_roles.configure=Configure Forum roles
 administration.configure_roles.existing=Currently defined roles
 administration.configure_roles.name=Role name
 administration.definition_builder=Definition builder
+administration.definition_builder_designers=Form and view designers
 administration.definition_builder_entry_form_designer=Entry designer
+administration.definition_builder_file_entry_form_designer=File entry designer
+administration.definition_builder_file_folder_view_designer=File folder designer
 administration.definition_builder_folder_view_designer=Folder designer
 administration.definition_builder_profile_listing_designer=Profile listing designer
 administration.definition_builder_profile_designer=Profile designer
