Add file entry definitions more fixes for liferay 4

--- a/ssf/web/docroot/WEB-INF/classes/content/messages.properties
+++ b/ssf/web/docroot/WEB-INF/classes/content/messages.properties
@@ -81,6 +81,7 @@ __file_entry_definition=File entry definition
 __file_entry_definitions=File entry definitions
 __file_entry_form_definition=File entry form definition
 __file_entry_view_definition=File entry view definition
+__file_entry_title=Title
 __file_folder=File folder
 __file_folder_form=File folder form
 __file_folder_listing=File folder listing
