Fixing Liferay problems

--- a/ssf/web/docroot/WEB-INF/classes/content/messages.properties
+++ b/ssf/web/docroot/WEB-INF/classes/content/messages.properties
@@ -679,6 +679,7 @@ notify.addresses.instructions= (Enter one e-mail address per line)
 notify.folder.label=Folder:
 
 portlet.notConfigured=The portlet preferences are not set. Choose the edit button to configure the portlet.
+portlet.setPreferences=Set preferences
 
 presence.addToOutlook=
 presence.away=Away
