--- a/trunk/ssf/web/docroot/WEB-INF/classes/content/messages.properties
+++ b/trunk/ssf/web/docroot/WEB-INF/classes/content/messages.properties
@@ -403,11 +403,11 @@ calendar.views=Views
 calendar.view.popupAltText=Navigate to a different day, week or month.
 
 common.select.none=--none--
-Configure=Configure
 
 dashboard.componentTitle.folder=Folder
 dashboard.componentTitle.search=Search
 
+dashboard.addContent=Add content
 dashboard.addModifyDelete=Add, modify or delete components on:
 dashboard.alignment=Alignment
 dashboard.alignment.center=Center
@@ -420,6 +420,11 @@ dashboard.configure=Configure the dashboard
 dashboard.configure.local=your personal dashboard (shown only to you when viewing this page)
 dashboard.configure.global=your default dashbaord (shown only to you when viewing any workspace or folder page)
 dashboard.configure.binder=the shared dashboard (shown to everyone when viewing this page)
+dashboard.confirmDeleteLocal=This is a personal dashboard component that appears on this page only.
+dashboard.confirmDeleteGlobal=This is a personal dashboard component that appears on all workspaces and folders.
+dashboard.confirmDeleteBinder=This is a shared dashboard component that everyone sees.
+dashboard.confirmDeleteUnknown=This is a dashboard component of unknown scope.
+dashboard.confirmDelete=Do you really want to delete it?
 dashboard.dataNotVisible=[The component data is not available while the component is hidden.]
 dashboard.displayNotAvailable=[The component display is not available during configuration.]
 dashboard.globalDashboard=This is your default dashboard. It is shown on all folders and workspaces.
