penlets, penlets, penlets

--- a/ssf/web/docroot/WEB-INF/classes/content/messages.properties
+++ b/ssf/web/docroot/WEB-INF/classes/content/messages.properties
@@ -407,24 +407,38 @@ common.select.none=--none--
 dashboard.componentTitle.folder=Folder
 dashboard.componentTitle.search=Search
 
+dashboard.addComponentToRegion=Add content to a region of the dashboard
 dashboard.addContent=Add content
+dashboard.addComponents.medium=Add a medium component
+dashboard.addComponents.narrow=Add a narrow component
+dashboard.addComponents.wide=Add a wide component
 dashboard.addModifyDelete=Add, modify or delete components on:
 dashboard.alignment=Alignment
 dashboard.alignment.center=Center
 dashboard.alignment.left=Left
 dashboard.alignment.right=Right
 dashboard.binderDashboard=This is the shared dashboard for the current workspace or folder. This is seen by everyone.
+dashboard.binderTitleIncluded=(the title of the workspace or folder is included)
 dashboard.componentLayout=Dashboard component configuration
+dashboard.componentScope=Component scope
+dashboard.componentScope.local=Personal component for this page only
+dashboard.componentScope.global=Personal component for all workspaces and folders
+dashboard.componentScope.binder=Shared component for this page
+dashboard.componentType=Component type
 dashboard.componentTitle=Component title
-dashboard.configure=Configure the dashboard
-dashboard.configure.local=your personal dashboard (shown only to you when viewing this page)
-dashboard.configure.global=your default dashbaord (shown only to you when viewing any workspace or folder page)
-dashboard.configure.binder=the shared dashboard (shown to everyone when viewing this page)
+dashboard.configure=Configure
+dashboard.configureDashboard=Configure the dashboard
+dashboard.configure.global=Set default layout for personal global components
+dashboard.configure.binder=Set default layout for shared components
 dashboard.confirmDeleteLocal=This is a personal dashboard component that appears on this page only.
 dashboard.confirmDeleteGlobal=This is a personal dashboard component that appears on all workspaces and folders.
 dashboard.confirmDeleteBinder=This is a shared dashboard component that everyone sees.
 dashboard.confirmDeleteUnknown=This is a dashboard component of unknown scope.
 dashboard.confirmDelete=Do you really want to delete it?
+dashboard.currentTitles=Current title settings
+dashboard.currentTitle.local=Personal, local
+dashboard.currentTitle.global=Personal, global
+dashboard.currentTitle.binder=Shared, local
 dashboard.dataNotVisible=[The component data is not available while the component is hidden.]
 dashboard.displayNotAvailable=[The component display is not available during configuration.]
 dashboard.globalDashboard=This is your default dashboard. It is shown on all folders and workspaces.
@@ -437,14 +451,24 @@ dashboard.editGlobal=Your default dashboard (shown only to you on all workspaces
 dashboard.editBinder=The shared dashboard that everyone sees on the current workspace or folder
 dashboard.enterHtml=Enter the HTML to be shown
 dashboard.height=Iframe height in pixels
-dashboard.includeBinderTitle=Include the title from the workspace or folder
+dashboard.includeBinderTitle=Append the title from the workspace or folder
 dashboard.layout=Dashboard layout
+dashboard.newTitle=New title
+dashboard.noComponents=[There are no dashboard components]
+dashboard.region.medium=Medium
+dashboard.region.narrow=Narrow
+dashboard.region.wide=Wide
 dashboard.rootOpen=Expand the first level of the tree
 dashboard.selectComponent=select a component
+dashboard.setDefaultLayout=Set the default dashboard layout
+dashboard.setTitle=Set the dashboard title
 dashboard.startingPoint=Starting point for the tree
 dashboard.startingPoint.current=Start at the current workspace
 dashboard.startingPoint.select=Select a starting workspace
-dashboard.title=Dashboard title
+dashboard.titleScope=Dashboard title scope
+dashboard.titleScope.local=Personal, local - title shows on this page for you only
+dashboard.titleScope.global=Personal, global - title shows on all workspaces and folders for you only
+dashboard.titleScope.binder=Shared, local - title shows on this page for everyone
 dashboard.width=Iframe width in pixels
 dashboard.url=Iframe source URL
 
