penlets, penlets, penlets

--- a/ssf/web/docroot/WEB-INF/classes/content/messages.properties
+++ b/ssf/web/docroot/WEB-INF/classes/content/messages.properties
@@ -424,8 +424,12 @@ dashboard.componentScope=Component scope
 dashboard.componentScope.local=Personal component for this page only
 dashboard.componentScope.global=Personal component for all workspaces and folders
 dashboard.componentScope.binder=Shared component for this page
+dashboard.componentStyle=Display style
+dashboard.componentStyle.none=No border
+dashboard.componentStyle.simple=Simple border
+dashboard.componentStyle.shadow=Shadow border
 dashboard.componentType=Component type
-dashboard.componentTitle=Component title
+dashboard.componentTitle=Title
 dashboard.configure=Configure
 dashboard.configureDashboard=Configure the dashboard
 dashboard.configure.global=Set default layout for personal global components
