--- a/trunk/ssf/web/docroot/WEB-INF/classes/content/messages.properties
+++ b/trunk/ssf/web/docroot/WEB-INF/classes/content/messages.properties
@@ -528,7 +528,7 @@ errorcode.definition.operation.invalid=Invalid operation ''{0}''
 errorcode.files.locked.by.other.users=One or more files are locked by other users
 errorcode.folder.hierarchy.invalid=The hierarchy of the folder ''{0}'' is invalid
 errorcode.function.exists=Function ''{0}'' already exists
-errorcode.library.folderentry.exists="An entry with the title ''{0}'' already exists
+errorcode.library.title="An entry with the title ''{0}'' already exists or title is empty
 errorcode.lock.id.mismatch=The supplied lock token id does not match
 errorcode.no.binder.by.the.id="No such binder by the id ''{0}''
 errorcode.no.binder.by.the.name="No such binder by the name ''{0}''
@@ -711,6 +711,10 @@ notify.addresses=Send to a list of e-mail addresses.
 notify.addresses.instructions= (Enter one e-mail address per line)
 notify.folder.label=Folder:
 
+popularity.visits.none=--no visits--
+popularity.visits=Visits
+popularity.rating.none=--no ratings--
+popularity.rating.average=Average rating
 portlet.notConfigured=The portlet preferences are not set. Choose the edit button to configure the portlet.
 portlet.setPreferences=Set preferences
 
