--- a/ssf/web/docroot/WEB-INF/classes/content/messages.properties
+++ b/ssf/web/docroot/WEB-INF/classes/content/messages.properties
@@ -93,6 +93,7 @@ __file_upload=File upload
 __filter_bar=Filter bar
 __firstName=First name
 __folderDefault=Folder default access
+__folder_blog=Blog
 __folder_listing=Folder listing
 __folder_folder=Entry folder
 __folder_file=File folder
