--- a/trunk/ssf/web/docroot/WEB-INF/classes/content/messages.properties
+++ b/trunk/ssf/web/docroot/WEB-INF/classes/content/messages.properties
@@ -295,6 +295,15 @@ administration.configure_profile_index=Index users and groups
 administration.selectFiles=Select files
 administration.importDefinitions=Import definitions
 
+binder.add.workspace.definition.legend=Workspace definition
+binder.add.workspace.select.definition=Select the workspace definition:
+binder.add.folder.definition.legend=Folder definition
+binder.add.folder.type.legend=Folder type
+binder.add.folder.select.type=Select the type of folder:
+binder.add.folder.select.definition=Select the folder definition:
+binder.add.folder.select.type.file=File entries only
+binder.add.folder.select.type.folder=Folder entries only
+
 binder.configure.access_control=Configure access control
 binder.configure.access_control.addRole=Define role membership
 binder.configure.access_control.currentMembershipSettings=Current role membership settings
