--- a/ssf/web/docroot/WEB-INF/classes/content/messages.properties
+++ b/ssf/web/docroot/WEB-INF/classes/content/messages.properties
@@ -60,6 +60,7 @@ __divider=Divider
 __emailAddress=Email address
 __endState=End state
 __entry_attachments=Entry attachments
+__entry_blog_view_definition=Blog view
 __entry_creator=Entry creator
 __entry_data_item=Entry data item
 __entry_date=Entry creation date
@@ -326,6 +327,9 @@ binder.configure.defaultView=Default folder view
 binder.configure.defaultEntryTypes=Default entry types
 binder.configure.profileEntryType=Profile type
 binder.configure.workflowAssociations=Workflow associations
+
+blog.archives=Archives
+blog.calendar=Calendar
 
 button.add=Add
 button.add_alias=Add alias
