--- a/trunk/ssf/web/docroot/WEB-INF/classes/content/messages.properties
+++ b/trunk/ssf/web/docroot/WEB-INF/classes/content/messages.properties
@@ -330,6 +330,7 @@ binder.configure.workflowAssociations=Workflow associations
 
 blog.archives=Archives
 blog.calendar=Calendar
+blog.replyCount=Replies
 
 button.add=Add
 button.add_alias=Add alias
@@ -727,8 +728,14 @@ notify.folder.label=Folder:
 
 popularity.visits.none=--no visits--
 popularity.visits=Visits
-popularity.rating.none=--no ratings--
+popularity.rating.1star=1 star
+popularity.rating.2stars=2 stars
+popularity.rating.3stars=3 stars
+popularity.rating.4stars=4 stars
+popularity.rating.5stars=5 stars
+popularity.rating.none=--not rated--
 popularity.rating.average=Average rating
+popularity.rating.register=Click to register a rating of
 portlet.notConfigured=The portlet preferences are not set. Choose the edit button to configure the portlet.
 portlet.setPreferences=Set preferences
 
