--- a/ssf/web/docroot/WEB-INF/classes/content/messages.properties
+++ b/ssf/web/docroot/WEB-INF/classes/content/messages.properties
@@ -735,6 +735,7 @@ popularity.rating.4stars=4 stars
 popularity.rating.5stars=5 stars
 popularity.rating.none=--not rated--
 popularity.rating.average=Average rating
+popularity.rating.count=Ratings
 popularity.rating.register=Click to register a rating of
 portlet.notConfigured=The portlet preferences are not set. Choose the edit button to configure the portlet.
 portlet.setPreferences=Set preferences
