--- a/trunk/ssf/web/docroot/WEB-INF/classes/content/messages.properties
+++ b/trunk/ssf/web/docroot/WEB-INF/classes/content/messages.properties
@@ -50,6 +50,7 @@ __default_workspace_view=Default workspace view
 __internal_webdav=Internal WebDAV server
 __definition_default_entry=Entry
 __definition_default_folder=Folder
+__definition_default_file_folder=File Folder
 __definition_default_workspace=Workspace
 __definitions=Definitions
 __delete=Delete
