--- a/trunk/ssf/web/docroot/WEB-INF/classes/content/messages.properties
+++ b/trunk/ssf/web/docroot/WEB-INF/classes/content/messages.properties
@@ -273,9 +273,9 @@ __workspace_view=Workspace view
 __zonName=Zon user name
 
 administration.configure_ldap=Configure LDAP
-administration.configure_roles=Configure Forum role definitions
+administration.configure_roles=Configure Aspen role definitions
 administration.configure_roles.add=Add a new role
-administration.configure_roles.configure=Configure Forum roles
+administration.configure_roles.configure=Configure Aspen roles
 administration.configure_roles.existing=Currently defined roles
 administration.configure_roles.name=Role name
 administration.definition_builder=Definition builder
@@ -288,10 +288,10 @@ administration.definition_builder_profile_listing_designer=Profile listing desig
 administration.definition_builder_profile_designer=Profile designer
 administration.definition_builder_workflow_designer=Workflow designer
 administration.definition_builder_workspace_designer=Workspace designer
-administration.title=Sitescape Administration
-administration.configure_notify=Forum outgoing e-mail
+administration.title=Aspen Administration
+administration.configure_notify=Aspen outgoing e-mail
 administration.configure_posting_job=Configure site incoming email schedule
-administration.configure_posting=Forum incoming e-mail
+administration.configure_posting=Aspen incoming e-mail
 administration.configure_search_index=Manage the search index
 administration.configure_profile_index=Index users and groups
 administration.selectFiles=Select files
@@ -658,12 +658,17 @@ forum.selectForums=Select the folders to be shown:
 forum.selectedForums=Currently selected folders:
 forum.unread=Unread entries
 
+general.groups=Groups
+general.Next=Next
 general.notLoggedIn=Your session has timed out. Please log in again.
 general.please_select=--select one--
 general.portletCacheProblem=You must log out, then log in again to make this portlet work again.
-general.users=Users
-general.groups=Groups
+general.Previous=Previous
 general.Refresh=Refresh
+general.users=Users
+
+help.welcome=Aspen Help System
+help.toc=Table of contents
 
 icon.close=Close
 icon.move=Move
@@ -675,7 +680,7 @@ incoming.forums=Associated folder(s)
 incoming.schedule_title=Specify when e-mail is fetched from the mail server
 incoming.forum_title=Configure incoming e-mail
 incoming.job_title=Set the incoming e-mail schedule
-incoming.toolbar_forums=Configure Forum
+incoming.toolbar_forums=Configure Aspen
 incoming.delete=delete?
 incoming.disabled=Incoming e-mail is disabled for this site
 incoming.subject=Subject
@@ -827,5 +832,5 @@ workflow=Workflow
 workflow.transitionTo=Transition to:
 
 ##Used in workspace tree
-tree.choose_forum=Choose a Forum
+tree.choose_forum=Choose a Aspen
 tree.choose_folder=Choose a Folder
