Add unique pathName to binders

--- a/ssf/web/docroot/WEB-INF/classes/content/messages.properties
+++ b/ssf/web/docroot/WEB-INF/classes/content/messages.properties
@@ -544,10 +544,10 @@ errorcode.definition.operation.invalid=Invalid operation ''{0}''
 errorcode.files.locked.by.other.users=One or more files are locked by other users
 errorcode.folder.hierarchy.invalid=The hierarchy of the folder ''{0}'' is invalid
 errorcode.function.exists=Function ''{0}'' already exists
-errorcode.library.title="An entry with the title ''{0}'' already exists or title is empty
+errorcode.title=The title ''{0}'' already exists or is empty
 errorcode.lock.id.mismatch=The supplied lock token id does not match
-errorcode.no.binder.by.the.id="No such binder by the id ''{0}''
-errorcode.no.binder.by.the.name="No such binder by the name ''{0}''
+errorcode.no.binder.by.the.id=No such binder by the id ''{0}''
+errorcode.no.binder.by.the.name=No such binder by the name ''{0}''
 errorcode.no.definition.by.the.id=No such definition by the id ''{0}''
 errorcode.no.folder.by.the.id=No such folder by the id ''{0}''
 errorcode.no.folder.entry.by.the.id=No such folder entry by the id ''{0}''
@@ -567,7 +567,7 @@ errorcode.operation.denied=<i>{0}</i> is unauthorized to perform <i>{1}</i> oper
 errorcode.unauthenticated.access=Access denied. User is unauthenticated or the session has expired.
 errorcode.workareafunctionmembership.exists=Membership already exists for function ''{1}'' at work area ''{0}''
 errorcode.write.files=Failed to write ''{1}'' files out of ''{2}'' for entry ''{0}'' 
-
+errorcode.invalid.argument=Missing or invalid argument to method call
 
 event.recurrence=Recurrence
 event.start=Start
