--- a/trunk/ssf/web/docroot/WEB-INF/classes/content/messages.properties
+++ b/trunk/ssf/web/docroot/WEB-INF/classes/content/messages.properties
@@ -669,6 +669,10 @@ general.users=Users
 
 help.welcome=Aspen Help System
 help.toc=Table of contents
+helpSpot.favoritesButton=Favorites button
+helpSpot.clipboardButton=Clipboard
+helpSpot.historyButton=History button
+helpSpot.searchButton=Search facility
 
 icon.close=Close
 icon.move=Move
