--- a/ssf/web/docroot/WEB-INF/classes/content/messages.properties
+++ b/ssf/web/docroot/WEB-INF/classes/content/messages.properties
@@ -669,10 +669,12 @@ general.users=Users
 
 help.welcome=Aspen Help System
 help.toc=Table of contents
+helpSpot.adminPortlet=Aspen administration
 helpSpot.favoritesButton=Favorites button
 helpSpot.clipboardButton=Clipboard
 helpSpot.historyButton=History button
 helpSpot.searchButton=Search facility
+helpSpot.workspaceTreePortlet=Workspace tree
 
 icon.close=Close
 icon.move=Move
