Remove types, move definitions into database, add export definition

--- a/ssf/web/docroot/WEB-INF/classes/content/messages.properties
+++ b/ssf/web/docroot/WEB-INF/classes/content/messages.properties
@@ -272,6 +272,12 @@ __workspace_members=Workspace members
 __workspace_view=Workspace view
 __zonName=Zon user name
 
+##Default definition tags
+__discussionFolder=Discussion Folder
+__discussionEntry=Discussion Entry
+__fileFolder=File Folder
+__fileEntry=File Entry
+
 administration.configure_ldap=Configure LDAP
 administration.configure_roles=Configure Aspen role definitions
 administration.configure_roles.add=Add a new role
@@ -288,14 +294,17 @@ administration.definition_builder_profile_listing_designer=Profile listing desig
 administration.definition_builder_profile_designer=Profile designer
 administration.definition_builder_workflow_designer=Workflow designer
 administration.definition_builder_workspace_designer=Workspace designer
-administration.title=Aspen Administration
 administration.configure_notify=Aspen outgoing e-mail
 administration.configure_posting_job=Configure site incoming email schedule
 administration.configure_posting=Aspen incoming e-mail
 administration.configure_search_index=Manage the search index
 administration.configure_profile_index=Index users and groups
+administration.import.definitions=Import definitions
+administration.errors=Error processing the request.
+administration.export.definitions=Export definitions
+administration.export.definitions.select=Select the definitions to be exported:
 administration.selectFiles=Select files
-administration.importDefinitions=Import definitions
+administration.title=Aspen Administration
 
 binder.add.workspace.definition.legend=Workspace definition
 binder.add.workspace.select.definition=Select the workspace definition:
