update jbpm and hiberante

--- a/ssf/web/docroot/WEB-INF/messages/messages.properties
+++ b/ssf/web/docroot/WEB-INF/messages/messages.properties
@@ -48,10 +48,15 @@ __date=Date
 __default_entry_view=Default entry view
 __default_workspace_view=Default workspace view
 __internal_webdav=Internal WebDAV server
-__definition_default_entry=Entry
+__definition_default_folder_entry=Folder entry
+__definition_default_file_entry=File entry
 __definition_default_folder=Folder
-__definition_default_file_folder=File Folder
+__definition_default_file_folder=File folder
 __definition_default_workspace=Workspace
+__definition_default_profiles=Profiles
+__definition_default_user=User
+__definition_default_group=Group
+
 __definitions=Definitions
 __delete=Delete
 __deleteAccess=Delete access
@@ -284,6 +289,8 @@ administration.configure_roles.add=Add a new role
 administration.configure_roles.configure=Configure Aspen roles
 administration.configure_roles.existing=Currently defined roles
 administration.configure_roles.name=Role name
+administration.configuration_builder=Configurations
+
 administration.definition_builder=Definition builder
 administration.definition_builder_designers=Form and view designers
 administration.definition_builder_entry_form_designer=Entry designer
